Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102796

QLocale::uiLanguages() has wrong order

    XMLWordPrintable

Details

    • 7a7f2547f3 (qt/qtbase/dev) 7a7f2547f3 (qt/tqtc-qtbase/dev)

    Description

      The function QLocale::uiLanguages() has the following documentation:

      Returns an ordered list of locale names [...] in preference order (like "en-Latn-US", "en-US", "en"). [...] The first item in the list is the most preferred one.


      Expected behaviour: QLocale(QLocale::English).uiLanguages() returns "en-Latn-US", "en-US", "en".

      Actual behaviour: QLocale(QLocale::English).uiLanguages() returns "en", "en-US", "en-Latn-US".

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Eddy Edward Welbourne
              sommerluk Lukas Sommer
              Vladimir Minenko Vladimir Minenko
              Alex Blasche Alex Blasche
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes